feat: add 2 and 3 section

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <div class="container">
         <section class="main-section">
+            <h1>webdev</h1>
             <header class="main-section__header">
                 <nav>
                     <a href="" class="main-section__header__a">About</a>
@@ -24,10 +25,41 @@
             <h3 class="main-section__subtitle">Whatever the approach to development may be, the final program must satisfy some fundamental properties</h3>
             <button class="btn main-section__btn">get started</button>
             <div class="main-section__icons">
-                <a href=""><img src="./assets/icons/mail_fff.svg" alt="mail"></a>
-                <a href=""><img src="./assets/icons/facebook_fff.svg" alt="facebook"></a>
-                <a href=""><img src="./assets/icons/insta_fff.svg" alt="instagram"></a>
-                <a href=""><img src="./assets/icons/telegram_fff.svg" alt="youtube"></a>
+                <a href="" class="main-section__icon"><img src="./assets/icons/mail_fff.svg" alt="mail"></a>
+                <a href="" class="main-section__icon"><img src="./assets/icons/facebook_fff.svg" alt="facebook"></a>
+                <a href="" class="main-section__icon"><img src="./assets/icons/insta_fff.svg" alt="instagram"></a>
+                <a href="" class="main-section__icon"><img src="./assets/icons/telegram_fff.svg" alt="youtube"></a>
+            </div>
+        </section>
+
+        <section class="smart-design">
+            <div class="smart-design__content">
+                <h3 class="smart-design__content__title">Rappresent your idea with a smart Design</h3>
+                <div class="smart-design__content__text">Tasks accompanying and related to programming include: testing, debugging, source code maintenance, <strong>implementation of build systems</strong>, and management of derived artifacts, such as the machine code of computer programs.</div>
+                <button class="btn smart-design__content__btn">get started</button>
+            </div>
+            <img src="./assets/img/content-image-1.jpg" alt="smart design" class="smart-design__img">
+        </section>
+
+        <section class="community">
+            <div class="community__comment">
+                <img src="./assets/icons/girl.png" alt="user" class="community__comment__img">
+                <h4 class="community__comment__title">our community</h4>
+                <div class="community__comment__text">A hacker is any skilled computer expert that uses their technical knowledge to overcome a problem, but it can also mean a security hacker in common language</div>
+            </div>
+            <div class="slider">
+                <div class="slide-btn">
+                    <img src="./assets/icons/prev.svg" alt="prev" class="slider-arrow">
+                    <span class="slider-num">1</span>
+                    <span class="slider-num">/</span>
+                    <span class="slider-num">5</span>
+                    <img src="./assets/icons/next.svg" alt="next" class="slider-arrow">
+                </div>
+                <div class="slider-items">
+                    <img src="./assets/img/slider-item-1.jpg" alt="slider img" class="slider-item">
+                    <img src="./assets/img/slider-item-2.jpg" alt="slider img" class="slider-item">
+                    <img src="./assets/img/slider-item-3.jpg" alt="slider img" class="slider-item">
+                </div>
             </div>
         </section>
     </div>
