feat: add the remaining section

--- a/index.html
+++ b/index.html
@@ -62,6 +62,51 @@
                 </div>
             </div>
         </section>
+
+        <section class="learn-more">
+            <img src="./assets/img/content-image-2.jpg" alt="notebook" class="learn-more__img">
+            <div class="learn-more__content">
+                <h3 class="learn-more__content__title">Implement right Code</h3>
+                <div class="learn-more__content__text">These might be considered part of the <strong>programming process</strong>, but often the term software development is used for this larger process with the term programming, implementation</div>
+                <button class="btn learn-more__content__btn">Learn more</button>
+            </div>
+        </section>
+
+        <section class="email-section">
+            <h3 class="email-section__title">sign up for our newsletter</h3>
+            <form action="" class="email-section__from">
+                <input type="email" placeholder="E-mail" name="email" class="email-section__input">
+                <button class="email-section__btn" ><img src="./assets/icons/fa-check.svg" alt="check" class="email-section__btn__img"></button>
+            </form>
+        </section>
+
+        <section class="download">
+            <h3 class="download__title">Download the App</h3>
+            <div class="download__subtitle">Machine code was the language of early programs, written in the instruction set of the particular machine, often in binary notation.</div>
+            <div class="download__block-btn">
+                <button class="download__block-btn__btn">
+                    <div class="download__block-btn__text">apple store</div>
+                    <div class="download__block-btn__block-img"><img src="./assets/icons/icon-apple.svg" class="download__block-btn__block-img__img" alt="iphone"></div>
+                </button>
+                <button class="download__block-btn__btn">
+                    <div class="download__block-btn__text">Play Market</div>
+                    <div class="download__block-btn__block-img"><img src="./assets/icons/icon-android.svg" class="download__block-btn__block-img__img" alt="android"></div>
+                </button>
+            </div>
+        </section>
+
+        <footer class="footer">
+            <div class="footer__block-link">
+                <a href="" class="footer__block-link__link">Credits</a>
+                <a href="" class="footer__block-link__link">Privacy</a>
+                <a href="" class="footer__block-link__link">Our teams</a>
+            </div>
+            <img src="./assets/icons/logo.svg" alt="logo">
+            <div class="footer__name-design">by TonYem for RSS at 2020</div>
+        </footer>
     </div>
+
+
+    <script src="./main.js"></script>
 </body>
 </html>
