--- a/webdev/index.html
+++ b/webdev/index.html
@@ -10,35 +10,41 @@
 </head>
 <body>
     <div class="container">
+        <header class="header">
+            <a href="" class="header__a">About</a>
+            <a href="" class="header__a">Syllabus</a>
+            <a href=""><img class="header__logo" src="./assets/icons/logo.svg" alt="logo"></a>
+            <a href="" class="header__a">Projects</a>
+            <a href="" class="header__a">FAQ</a>
+        </header>
         <section class="main-section">
-            <h1>webdev</h1>
-            <header class="main-section__header">
-                <nav>
-                    <a href="" class="main-section__header__a">About</a>
-                    <a href="" class="main-section__header__a">Syllabus</a>
-                    <a href="" class="main-section__header__a">Projects</a>
-                    <a href="" class="main-section__header__a">FAQ</a>
-                </nav>
-                <img class="main-section__logo" src="./assets/icons/logo.svg" alt="logo">
-            </header>
-            <h2 class="main-section__title">your life is WebDev</h2>
-            <h3 class="main-section__subtitle">Whatever the approach to development may be, the final program must satisfy some fundamental properties</h3>
-            <button class="btn main-section__btn">get started</button>
-            <div class="main-section__icons">
-                <a href="" class="main-section__icon"><img src="./assets/icons/mail_fff.svg" alt="mail"></a>
-                <a href="" class="main-section__icon"><img src="./assets/icons/facebook_fff.svg" alt="facebook"></a>
-                <a href="" class="main-section__icon"><img src="./assets/icons/insta_fff.svg" alt="instagram"></a>
-                <a href="" class="main-section__icon"><img src="./assets/icons/telegram_fff.svg" alt="youtube"></a>
+            <div class="container_content">
+                <h1>webdev</h1>
+                <div class="main-section__content">
+                    <h2 class="main-section__title">your life is WebDev</h2>
+                    <h3 class="main-section__subtitle">Whatever the approach to development may be, the final program must satisfy some fundamental properties</h3>
+                    <button class="btn main-section__btn">get started</button>
+                    <div class="main-section__icons">
+                        <a href="" class="main-section__icon"><img src="./assets/icons/mail_fff.svg" alt="mail"></a>
+                        <a href="" class="main-section__icon"><img src="./assets/icons/facebook_fff.svg" alt="facebook"></a>
+                        <a href="" class="main-section__icon"><img src="./assets/icons/insta_fff.svg" alt="instagram"></a>
+                        <a href="" class="main-section__icon"><img src="./assets/icons/telegram_fff.svg" alt="youtube"></a>
+                    </div>
+                </div>
             </div>
         </section>
 
         <section class="smart-design">
-            <div class="smart-design__content">
-                <h3 class="smart-design__content__title">Rappresent your idea with a smart Design</h3>
-                <div class="smart-design__content__text">Tasks accompanying and related to programming include: testing, debugging, source code maintenance, <strong>implementation of build systems</strong>, and management of derived artifacts, such as the machine code of computer programs.</div>
-                <button class="btn smart-design__content__btn">get started</button>
+            <div class="container_content">
+                <div class="smart-design__container">
+                    <div class="smart-design__content">
+                        <h3 class="smart-design__content__title">Rappresent your idea with a smart Design</h3>
+                        <div class="smart-design__content__text">Tasks accompanying and related to programming include: testing, debugging, source code maintenance, <strong>implementation of build systems</strong>, and management of derived artifacts, such as the machine code of computer programs.</div>
+                        <button class="btn smart-design__content__btn">get started</button>
+                    </div>
+                    <img src="./assets/img/content-image-1.jpg" alt="smart design" class="smart-design__img">
+                </div>
             </div>
-            <img src="./assets/img/content-image-1.jpg" alt="smart design" class="smart-design__img">
         </section>
 
         <section class="community">
@@ -64,11 +70,15 @@
         </section>
 
         <section class="learn-more">
-            <img src="./assets/img/content-image-2.jpg" alt="notebook" class="learn-more__img">
-            <div class="learn-more__content">
-                <h3 class="learn-more__content__title">Implement right Code</h3>
-                <div class="learn-more__content__text">These might be considered part of the <strong>programming process</strong>, but often the term software development is used for this larger process with the term programming, implementation</div>
-                <button class="btn learn-more__content__btn">Learn more</button>
+            <div class="container_content">
+                <div class="learn-more__block">
+                    <img src="./assets/img/content-image-2.jpg" alt="notebook" class="learn-more__img">
+                    <div class="learn-more__content">
+                    <h3 class="learn-more__content__title">Implement right Code</h3>
+                    <div class="learn-more__content__text">These might be considered part of the <strong>programming process</strong>, but often the term software development is used for this larger process with the term programming, implementation</div>
+                    <button class="btn learn-more__content__btn">Learn more</button>
+                </div>
+            </div>
             </div>
         </section>
 
