fix: slider-img

--- a/webdev/index.html
+++ b/webdev/index.html
@@ -13,13 +13,14 @@
         <header class="header">
             <a href="" class="header__a">About</a>
             <a href="" class="header__a">Syllabus</a>
-            <a href=""><img class="header__logo" src="./assets/icons/logo.svg" alt="logo"></a>
+            <a href="" class="header__logo"><img  src="./assets/icons/logo.svg" alt="logo"></a>
             <a href="" class="header__a">Projects</a>
             <a href="" class="header__a">FAQ</a>
+            <h1>webdev</h1>
         </header>
         <section class="main-section">
             <div class="container_content">
-                <h1>webdev</h1>
+                
                 <div class="main-section__content">
                     <h2 class="main-section__title">your life is WebDev</h2>
                     <h3 class="main-section__subtitle">Whatever the approach to development may be, the final program must satisfy some fundamental properties</h3>
@@ -42,7 +43,7 @@
                         <div class="smart-design__content__text">Tasks accompanying and related to programming include: testing, debugging, source code maintenance, <strong>implementation of build systems</strong>, and management of derived artifacts, such as the machine code of computer programs.</div>
                         <button class="btn smart-design__content__btn">get started</button>
                     </div>
-                    <img src="./assets/img/content-image-1.jpg" alt="smart design" class="smart-design__img">
+                    <div class="smart-design__img"><img src="./assets/img/content-image-1.jpg" alt="smart design"></div>
                 </div>
             </div>
         </section>
@@ -62,9 +63,9 @@
                     <img src="./assets/icons/next.svg" alt="next" class="slider-arrow">
                 </div>
                 <div class="slider-items">
-                    <img src="./assets/img/slider-item-1.jpg" alt="slider img" class="slider-item">
-                    <img src="./assets/img/slider-item-2.jpg" alt="slider img" class="slider-item">
-                    <img src="./assets/img/slider-item-3.jpg" alt="slider img" class="slider-item">
+                    <div class="slider-item"><img src="./assets/img/slider-item-1.jpg" alt="slider img"></div>
+                    <div class="slider-item"><img src="./assets/img/slider-item-2.jpg" alt="slider img"></div>
+                    <div class="slider-item"><img src="./assets/img/slider-item-3.jpg" alt="slider img"></div>
                 </div>
             </div>
         </section>
@@ -72,7 +73,7 @@
         <section class="learn-more">
             <div class="container_content">
                 <div class="learn-more__block">
-                    <img src="./assets/img/content-image-2.jpg" alt="notebook" class="learn-more__img">
+                    <div class="learn-more__img"><img src="./assets/img/content-image-2.jpg" alt="notebook" ></div>
                     <div class="learn-more__content">
                     <h3 class="learn-more__content__title">Implement right Code</h3>
                     <div class="learn-more__content__text">These might be considered part of the <strong>programming process</strong>, but often the term software development is used for this larger process with the term programming, implementation</div>
@@ -111,7 +112,7 @@
                 <a href="" class="footer__block-link__link">Privacy</a>
                 <a href="" class="footer__block-link__link">Our teams</a>
             </div>
-            <img src="./assets/icons/logo.svg" alt="logo">
+            <a href=""><img src="./assets/icons/logo.svg" alt="logo"></a>
             <div class="footer__name-design">by TonYem for RSS at 2020</div>
         </footer>
     </div>
